--- a/preprocessing/img-preprocessing.ipynb
+++ b/preprocessing/img-preprocessing.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RFMiD Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
