--- a/preprocessing/img-metadata-cleaning.ipynb
+++ b/preprocessing/img-metadata-cleaning.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,13 +670,13 @@
     "            break\n",
     "\n",
     "rfmid_amd_others = rfmid_amd_others.loc[rfmid_amd_others['ARMD'] == 1] .reset_index(drop = True)\n",
-    "rfmid_amd_others.to_csv('../data/RFMiD/Training_Set/Training_Set/RFMiD_AMD-w-other-diseases.csv')\n",
+    "#rfmid_amd_others.to_csv('../data/metadata/RFMiD/Training_Set/Training_Set/RFMiD_AMD-w-other-diseases.csv')\n",
     "rfmid_amd_others.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
        "[99 rows x 15 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
        "4  dry age-related macular degeneration，diabetic ...  0  1  0  0  1  0  0  0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
        "[1001 rows x 15 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,21 +1706,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\a\\AppData\\Local\\Temp\\ipykernel_3372\\2681982228.py:8: FutureWarning: The series.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\mackr\\AppData\\Local\\Temp\\ipykernel_18132\\1293655129.py:8: FutureWarning: The series.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  sel_img = right_normal_img.append(left_normal_img, ignore_index = True)\n"
      ]
     }
    ],
    "source": [
     "#ODIR Normal\n",
-    "data_folder = '../data/ODIR/ODIR-5K/Training Images'\n",
+    "data_folder = '../data/ODIR/ODIR-5K/ODIR-5K/Training Images'\n",
     "select_folder = '../data/filtered-data/ODIR/Normal'\n",
     "\n",
     "right_normal_img = odir_normals['Right-Fundus']\n",
@@ -1738,21 +1738,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\a\\AppData\\Local\\Temp\\ipykernel_3372\\1230471351.py:8: FutureWarning: The series.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\mackr\\AppData\\Local\\Temp\\ipykernel_18132\\3491597151.py:8: FutureWarning: The series.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  sel_img = right_normal_img.append(left_normal_img, ignore_index = True)\n"
      ]
     }
    ],
    "source": [
     "#ODIR Pure AMD\n",
-    "data_folder = '../data/ODIR/ODIR-5K/Training Images'\n",
+    "#data_folder = '../data/ODIR/ODIR-5K/Training Images'\n",
     "select_folder = '../data/filtered-data/ODIR/Pure AMD'\n",
     "\n",
     "right_normal_img = odir_pure_amd['Right-Fundus'].dropna()\n",
@@ -1766,21 +1766,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\a\\AppData\\Local\\Temp\\ipykernel_3372\\2294167388.py:8: FutureWarning: The series.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\mackr\\AppData\\Local\\Temp\\ipykernel_18132\\3579736111.py:8: FutureWarning: The series.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  sel_img = right_normal_img.append(left_normal_img, ignore_index = True)\n"
      ]
     }
    ],
    "source": [
     "#ODIR AMD w others\n",
-    "data_folder = '../data/ODIR/ODIR-5K/Training Images'\n",
+    "data_folder = '../data/ODIR/ODIR-5K/ODIR-5K/Training Images'\n",
     "select_folder = '../data/filtered-data/ODIR/AMD w others'\n",
     "\n",
     "right_normal_img = R_odir_amd_others['Right-Fundus'].dropna()\n",
@@ -1794,12 +1794,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#RFMiD Normal\n",
-    "data_folder = '../data/RFMiD/Training_Set/Training'\n",
+    "data_folder = '../data/RFMiD/Training_Set/Training_Set/Training'\n",
     "select_folder = '../data/filtered-data/RFMiD/Normal'\n",
     "\n",
     "sel_img = rfmid_normals['ID']\n",
@@ -1818,7 +1818,7 @@
    "outputs": [],
    "source": [
     "#RFMiD Pure AMD\n",
-    "data_folder = '../data/RFMiD/Training_Set/Training'\n",
+    "#data_folder = '../data/RFMiD/Training_Set/Training'\n",
     "select_folder = '../data/filtered-data/RFMiD/Pure AMD'\n",
     "\n",
     "sel_img = rfmid_pure_amd['ID']\n",
@@ -1833,7 +1833,7 @@
    "outputs": [],
    "source": [
     "#RFMiD AMD w others\n",
-    "data_folder = '../data/RFMiD/Training_Set/Training'\n",
+    "#data_folder = '../data/RFMiD/Training_Set/Training'\n",
     "select_folder = '../data/filtered-data/RFMiD/AMD w others'\n",
     "\n",
     "sel_img = rfmid_amd_others['ID']\n",
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1896,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1920,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2011,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2031,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2041,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2069,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -2083,12 +2083,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "73eacb67b8055eaec7fe2ec95715e2b8f6137607a05032e980670c2be9c4e5ce"
+    "hash": "958b22caee2cb0ccb656ab37bd85ad373cd98d377de0a0db81d7ef881a779b94"
    }
   }
  },
