"with MS Unet application"

--- a/preprocessing/data-preprocessing.ipynb
+++ b/preprocessing/data-preprocessing.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,11 +149,11 @@
     "#rce_clahe('../data/preprocessing/filtered-data/ODIR/AMD w others', '../data/preprocessing/CLAHE/ODIR/AMD w others', 'ODIR', 'amd_w_others')\n",
     "#rce_clahe('../data/preprocessing/filtered-data/ODIR/Normal', '../data/preprocessing/CLAHE/ODIR/Normal', 'ODIR', 'normal')\n",
     "\n",
-    "rce_clahe('../data/preprocessing/filtered-data/RFMiD/Pure AMD', '../data/CLAHE/RFMiD/Pure AMD', 'RFMiD', 'pure_amd')\n",
+    "#rce_clahe('../data/preprocessing/filtered-data/RFMiD/Pure AMD', '../data/CLAHE/RFMiD/Pure AMD', 'RFMiD', 'pure_amd')\n",
     "#rce_clahe('../data/preprocessing/filtered-data/RFMiD/AMD w others', '../data/preprocessing/CLAHE/RFMiD/AMD w others', 'RFMiD', 'amd_w_others')\n",
     "#rce_clahe('../data/preprocessing/filtered-data/RFMiD/Normal', '../data/preprocessing/CLAHE/RFMiD/Normal', 'RFMiD', 'normal')\n",
     "#\n",
-    "#rce_clahe('../data/preprocessing/filtered-data/STARE/AMD w others', '../data/preprocessing/CLAHE/STARE/AMD w others', 'STARE', 'amd_w_others')\n",
+    "rce_clahe('../data/preprocessing/filtered-data/STARE/AMD w others', '../data/preprocessing/CLAHE/STARE/AMD w others', 'QSTARE', 'amd_w_others')\n",
     "#rce_clahe('../data/preprocessing/filtered-data/STARE/Normal', '../data/preprocessing/CLAHE/STARE/Normal', 'STARE', 'normal')"
    ]
   },
