--- a/preprocessing/data-preprocessing.ipynb
+++ b/preprocessing/data-preprocessing.ipynb
@@ -5,62 +5,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Augmentation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import cv2\n",
-    "import glob\n",
-    "import keras\n",
-    "from keras.utils.image_utils import img_to_array, array_to_img, load_img\n",
-    "from keras.preprocessing.image import ImageDataGenerator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#STARE\n",
-    "def data_augmentation():\n",
-    "    img_dir = '../data/filtered-data/ODIR/Pure AMD' #orginal directory\n",
-    "    aug_dir = '../data/filtered-data/ODIR/Pure AMD/Augmented' #augmented directory\n",
-    "    data_path = os.path.join(img_dir,'*g')\n",
-    "\n",
-    "    files = glob.glob(data_path) #error @ rgb_img when removing glob.glob dunno y\n",
-    "    data = []\n",
-    "    for f1 in files:\n",
-    "        img = cv2.imread(f1) #read img\n",
-    "        rgb_img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB) #convert BGR img to RGB (depends)\n",
-    "        data.append(rgb_img) \n",
-    "\n",
-    "        x = img_to_array(rgb_img)  \n",
-    "        x = x.reshape((1,) + x.shape)  \n",
-    "\n",
-    "        path, dirs, files = next(os.walk(img_dir))\n",
-    "        file_count = len(files)\n",
-    "\n",
-    "        datagen = ImageDataGenerator(horizontal_flip = True)\n",
-    "\n",
-    "        i = 0\n",
-    "        for batch in datagen.flow(x, batch_size = 1, save_to_dir = aug_dir, save_prefix = 'ODIR_Augment', save_format = 'jpg'):\n",
-    "            i += 1\n",
-    "            if i == 1:\n",
-    "                break  "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Red Channel Extraction & CLAHE"
    ]
   },
@@ -72,7 +16,12 @@
    "source": [
     "import numpy as np\n",
     "import os\n",
-    "from os import listdir"
+    "from os import listdir\n",
+    "import cv2\n",
+    "import glob\n",
+    "import keras\n",
+    "from keras.utils.image_utils import img_to_array, array_to_img, load_img\n",
+    "from keras.preprocessing.image import ImageDataGenerator"
    ]
   },
   {
