--- a/preprocessing/data-preprocessing.ipynb
+++ b/preprocessing/data-preprocessing.ipynb
@@ -54,24 +54,20 @@
     "    if not os.path.exists(red_dir):\n",
     "        os.mkdir(red_dir)\n",
     "\n",
-    "    datagen = ImageDataGenerator(horizontal_flip = True)\n",
-    "\n",
     "    i = 0\n",
     "    for images in os.listdir(img_dir): \n",
     "        # check if the image ends with png or jpg or jpeg\n",
-    "        if (images.endswith(\".png\") or images.endswith(\".jpg\")\\\n",
+    "        if (images.endswith(\".png\") or images.endswith(\".jpg\")\n",
     "            or images.endswith(\".jpeg\")):\n",
     "            img = cv2.imread(img_dir + \"/\" + images, cv2.IMREAD_UNCHANGED)\n",
     "            resized_img = cv2.resize(img, (512, 512))\n",
     "\n",
-    "            # exclude red channel\n",
+    "            # exclude green channel\n",
     "            b,g,r = cv2.split(resized_img)\n",
     "\n",
     "            # apply CLAHE\n",
     "            clahe = cv2.createCLAHE(clipLimit=5)\n",
-    "            b_clahe_enhanced = clahe.apply(b)\n",
     "            g_clahe_enhanced = clahe.apply(g) + 50\n",
-    "            r_clahe_enhanced = clahe.apply(r)\n",
     "\n",
     "            # merge enhanced channels\n",
     "            clahe_enhanced_img = cv2.merge((b, g_clahe_enhanced, r))\n",
