Thesis has been finished

--- a/classification/run-u-net-on-data.ipynb
+++ b/classification/run-u-net-on-data.ipynb
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "print(ODIR_Pure_AMD_data.shape)"
+    "print(ODIR_Pure_AMD_data[0].shape)"
    ]
   },
   {
@@ -382,7 +382,7 @@
     "\n",
     "##predict function\n",
     "def predict(data):\n",
-    "    with tf.device('GPU'): \n",
+    "    with tf.device('GPU'):\n",
     "        result = model.predict(data)\n",
     "        \n",
     "    return result"
